added team slogan

--- a/admin_site/templates/add_team.html
+++ b/admin_site/templates/add_team.html
@@ -17,6 +17,11 @@
   </div>
 
   <div class="form-group col-md-6">
+    <label for="slogan">Slogan</label>
+    <input type="text" class="form-control" id="slogan" name="slogan" required>
+  </div>
+
+  <div class="form-group col-md-6">
     <label for="chairman_reg">Chairman Reg. No. (should be registered as an aspirant)</label>
     <input type="text" class="form-control" id="chairman_reg" name="chairman_reg" required>
   </div>
