--- a/admin_site/templates/add_aspirant.html
+++ b/admin_site/templates/add_aspirant.html
@@ -22,6 +22,12 @@
   </div>
   <div class="form-row">
     <div class="form-group col-md-6">
+      <label for="message">Message to Voters</label>
+      <textarea class="form-control" id="message" name="message" required></textarea>
+    </div>
+  </div>
+  <div class="form-row">
+    <div class="form-group col-md-6">
         <label for="logo">Aspirant Photo</label>
         <input type="file" accept="image/*" onchange="encodeImage(this, 'aspirant_photo')" class="form-control" id="photo" required>
         <input type="text" id="aspirant_photo" name="aspirant_photo" class="hideMe">
