--- a/admin_site/templates/view_election.html
+++ b/admin_site/templates/view_election.html
@@ -11,9 +11,9 @@
             <img src="{{ team.logo }}" class="card-img-top" alt="Party Logo">
             <div class="card-body">
                 <h5 class="card-title">{{ team.name }}</h5>
-                <p class="card-text">Chairman: {{ team.chairman }}</p>
-                <p class="card-text">Sec. Gen.: {{ team.sec_gen }}</p>
-                <p class="card-text">Treasurer: {{ team.treasurer }}</p>
+                <p class="card-text"><a href="{% url "admin_view_aspirant" team.chairman_id %}" class="black">Chairman: {{ team.chairman }}</a></p>
+                <p class="card-text"><a href="{% url "admin_view_aspirant" team.treasurer_id %}" class="black">Treasurer: {{ team.treasurer }}</a></p>
+                <p class="card-text"><a href="{% url "admin_view_aspirant" team.sec_gen_id %}" class="black">Sec. Gen.: {{ team.sec_gen }}</a></p>
             </div>
         </div>
     {% endfor %}
