--- a/admin_site/templates/add_school.html
+++ b/admin_site/templates/add_school.html
@@ -1,13 +1,19 @@
 {% extends 'base.html' %}
 {% block content %}
-<h2>Add School</h2>
+<div class="title">
+    <h2>Add School</h2>
+</div>
+<div class="main">
+<div class="form">
 <form method="POST" action="{% url "school_reg" %}">
   <div class="form-row">
-    <div class="form-group col-md-6">
+    <div class="form-group col-md-12">
       <label for="school_name">School Name</label>
       <input type="text" class="form-control" id="school_name" name="school_name" required>
     </div>
   </div>
   <button type="submit" class="btn btn-primary">Add</button>
 </form>
+</div>
+</div>
 {% endblock %}
