--- a/admin_site/templates/index.html
+++ b/admin_site/templates/index.html
@@ -1,4 +1,40 @@
 {% extends 'base.html' %}
 {% block content %}
-my soul is so empty... \_(+_+)_/
+ <div class="title">
+     <h2>Admin Dashboard</h2>
+ </div>
+<div class="main">
+    <div class="main">
+        <div class="widget" style="background-color:    #05A85C">
+            <div class="title" style="background-color: #008C4D; color: #fff">Number of Elections</div>
+            <i class="fa fa-users fa-5x" style="color: #49DE94"></i>
+            <h1 style="margin-left:50%; font-size: 100px;  bottom: 50px; right: 5px; color:#28D17C;"></h1>
+        </div> 
+        <div class="widget" style="background-color:   #F2353C">
+            <div class="title" style="background-color:  #E62020;color: #fff">Number of Schools</div>
+            <i class="fa fa-user fa-5x" style="color: #FF4C52"></i>
+            <h1 style="margin-left:50%; font-size: 100px; bottom: 50px; right: 5px; color:  #FF8589;"></h1>
+
+        </div>
+        <div class="widget" style="background-color:  #247CF0">
+            <div class="title" style="background-color: #0B69E3; color: #fff">Number of Teams</div>
+            <i class="fa fa-user fa-5x" style="color: #3E8EF7"></i>
+            <h1 style="margin-left:50%; font-size: 100px;  bottom: 50px; right: 5px; color: #B8D7FF;"></h1>
+
+        </div>
+        <div class="widget" style="background-color:  #247CF0">
+            <div class="title" style="background-color: #0B69E3; color: #fff">Number of Voters</div>
+            <i class="fa fa-user fa-5x" style="color: #3E8EF7"></i>
+            <h1 style="margin-left:50%; font-size: 100px;  bottom: 50px; right: 5px; color: #B8D7FF;"></h1>
+
+        </div>
+        <div class="widget" style="background-color:  #247CF0">
+            <div class="title" style="background-color: #0B69E3; color: #fff">Ongoing</div>
+            <i class="fa fa-user fa-5x" style="color: #3E8EF7"></i>
+            <h1 style="margin-left:50%; font-size: 100px;  bottom: 50px; right: 5px; color: #B8D7FF;"></h1>
+
+        </div>
+      
+    </div>
+</div>
 {% endblock %}
