--- a/admin_site/templates/add_voter.html
+++ b/admin_site/templates/add_voter.html
@@ -1,6 +1,10 @@
 {% extends 'base.html' %}
 {% block content %}
-<h2>Add Voter</h2>
+<div class="title">
+  <h2>Add Voter </h2>
+</div>
+<div class="main">
+<div class="form"
 <form method="POST" action="{% url "voter_reg" %}">
   <div class="form-row">
     <div class="form-group col-md-6">
@@ -18,4 +22,6 @@
   </div>
   <button type="submit" class="btn btn-primary">Add</button>
 </form>
+</div>
+</div>
 {% endblock %}
