--- a/admin_site/templates/base.html
+++ b/admin_site/templates/base.html
@@ -3,9 +3,9 @@
 <html lang="en">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="{% static "css/bootstrap.min.css" %}">
-    <link rel="stylesheet" href="{% static "css/main.css "%}">
+    <link rel="stylesheet" href="{% static "css/main.css"%}">
     <body>
-        <nav class="navbar navbar-dark bg-dark">
+        <nav class="navbar navbar-dark bg-dark static-nav">
             <a class="navbar-brand" href="{% url "admin_index" %}">Votr</a>
             <ul class="nav justify-content-end">
                 <li class="nav-item">
@@ -14,16 +14,12 @@
                 <li class="nav-item">
                     <a class="nav-link" href="#">test</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">test</a>
-                </li>
+                <span style="font-size:30px;color: #fff;cursor:pointer" onclick="openNav()">&#9776;</span>
             </ul>
         </nav>
-
-        <div class="wrapper">
-            <nav id="sidebar">
+        <nav id="mySidenav" class="sidebar">
+                <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
                 <ul class="list-unstyled components">
-                    <p>Navigation</p>
                     <li>
                         <a href="{% url "admin_index" %}">Home</a>
                     </li>
@@ -43,9 +39,8 @@
                         <a href="{% url "admin_schools" %}">View Schools</a>
                     </li>
                 </ul>
-            </nav>
-        
-            <div id="content">
+            </nav>        
+            <div id="Content" class="main-content">
                 {% block content %}{% endblock %}
             </div>
         </div>
