--- a/admin_site/templates/create_elections.html
+++ b/admin_site/templates/create_elections.html
@@ -1,21 +1,27 @@
 {% extends 'base.html' %}
 {% block content %}
-<h2>Create Election</h2>
+<div class="title">
+  <h2>Create New Election</h2>
+</div>
+<div class="main">
+<div class="form"
 <form method="POST" action="{% url "election_reg" %}">
   <div class="form-row">
-    <div class="form-group col-md-6">
+    <div class="form-group col-md-12">
       <label for="election_name">Election Name</label>
       <input type="text" class="form-control" id="election_name" name="election_name" required>
     </div>
   </div>
-  <div class="form-group col-md-6">
+  <div class="form-group col-md-12">
     <label for="start_timestamp">Start Timestamp i.e. 05/05/2020 05:05 AM</label>
     <input type="datetime-local" class="form-control" id="start_timestamp" name="start_timestamp" required>
   </div>
-  <div class="form-group col-md-6">
+  <div class="form-group col-md-12">
     <label for="end_timestamp">End Timestamp</label>
     <input type="datetime-local" class="form-control" id="end_timestamp" name="end_timestamp" required>
   </div>
   <button type="submit" class="btn btn-primary">Create</button>
 </form>
+</div>
+</div>
 {% endblock %}
