--- a/admin_site/templates/elections.html
+++ b/admin_site/templates/elections.html
@@ -1,16 +1,20 @@
 {% extends 'base.html' %}
 {% block content %}
-<h2>Elections</h2>
-<div class="cards-wrapper">
-    {% for election in elections_list %}
-        <div class="card c-card">
-            <div class="card-body">
-                <h5 class="card-title">{{ election.name }}</h5>
-                <p class="card-text">Start: {{ election.start }}</p>
-                <p class="card-text">End: {{ election.end }}</p>
-                <a href="{% url "admin_view_election" election.id %}" class="btn btn-primary">View</a>
+<div class="title">
+    <h2>Elections</h2>
+</div>
+    <div class="main">
+    <div class="col mb-4">
+        {% for election in elections_list %}
+            <div class="card c-card">
+                <div class="card-body">
+                    <h5 class="card-title">{{ election.name }}</h5>
+                    <p class="card-text">Start: {{ election.start }}</p>
+                    <p class="card-text">End: {{ election.end }}</p>
+                    <a href="{% url "admin_view_election" election.id %}" class="btn btn-primary">View</a>
+                </div>
             </div>
-        </div>
-    {% endfor %}
+        {% endfor %}
+    </div>
 </div>
 {% endblock %}
