--- a/admin_site/templates/index.html
+++ b/admin_site/templates/index.html
@@ -13,22 +13,22 @@
         <div class="widget" style="background-color:   #F2353C">
             <div class="title" style="background-color:  #E62020;color: #fff">Number of Schools</div>
             <i class="fa fa-user fa-5x" style="color: #FF4C52"></i>
-            <h1 style="text-align: center; font-size: 100px; bottom: 50px; right: 5px; color:  #FF8589;">1</h1>
+            <h1 style="text-align: center; font-size: 100px; bottom: 50px; right: 5px; color:  #FF8589;">{{ schools }}</h1>
         </div>
         <div class="widget" style="background-color:  #247CF0">
             <div class="title" style="background-color: #0B69E3; color: #fff">Number of Parties</div>
             <i class="fa fa-user fa-5x" style="color: #3E8EF7"></i>
-            <h1 style="text-align: center; font-size: 100px;  bottom: 50px; right: 5px; color: #B8D7FF;">1</h1>
+            <h1 style="text-align: center; font-size: 100px;  bottom: 50px; right: 5px; color: #B8D7FF;">{{ teams }}</h1>
         </div>
         <div class="widget" style="background-color:  #247CF0">
             <div class="title" style="background-color: #0B69E3; color: #fff">Number of Voters</div>
             <i class="fa fa-user fa-5x" style="color: #3E8EF7"></i>
-            <h1 style="text-align: center; font-size: 100px;  bottom: 50px; right: 5px; color: #B8D7FF;">1</h1>
+            <h1 style="text-align: center; font-size: 100px;  bottom: 50px; right: 5px; color: #B8D7FF;">{{ voters }}</h1>
         </div>
         <div class="widget" style="background-color:  #247CF0">
-            <div class="title" style="background-color: #0B69E3; color: #fff">Ongoing</div>
+            <div class="title" style="background-color: #0B69E3; color: #fff">Votes cast</div>
             <i class="fa fa-user fa-5x" style="color: #3E8EF7"></i>
-            <h1 style="font-size: 100px;  bottom: 50px; right: 5px; color: #B8D7FF; text-align: center;">1</h1>
+            <h1 style="font-size: 100px;  bottom: 50px; right: 5px; color: #B8D7FF; text-align: center;">{{ cast }}</h1>
         </div>
       
     </div>
