removed results site, sort parties by vote

--- a/admin_site/templates/base.html
+++ b/admin_site/templates/base.html
@@ -8,12 +8,12 @@
         <nav class="navbar navbar-dark bg-dark static-nav">
             <a class="navbar-brand" href="{% url "admin_index" %}">Votr</a>
             <ul class="nav justify-content-end">
-                <li class="nav-item">
+                {% comment %} <li class="nav-item">
                     <a class="nav-link" href="#">test</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">test</a>
-                </li>
+                </li> {% endcomment %}
                 <span style="font-size:30px;color: #fff;cursor:pointer" onclick="openNav()">&#9776;</span>
             </ul>
         </nav>
