--- a/static/css/main.css
+++ b/static/css/main.css
@@ -61,7 +61,7 @@ a, a:hover, a:link, a:visited, a:active {
 	font-weight: 700;
 	color: #333;
 	font-size: 18px;
-	
+	margin-top: 32px;
 }
 .form {
   height: 100%;
@@ -226,6 +226,7 @@ nav span{
   position: fixed !important;
   width: 100% !important;
   top: 0 !important;
+  z-index: 999 !important;
   /* overflow: hidden !important; */
 }
 /* 
