--- a/admin_site/templates/base.html
+++ b/admin_site/templates/base.html
@@ -38,6 +38,9 @@
                     <li>
                         <a href="{% url "admin_schools" %}">View Schools</a>
                     </li>
+                    <li>
+                        <a href="{% url "logout" %}?next=/">Logout</a>
+                    </li>
                 </ul>
             </nav>        
             <div id="Content" class="main-content">
