--- a/admin_site/templates/view_election.html
+++ b/admin_site/templates/view_election.html
@@ -1,10 +1,9 @@
 {% extends 'base.html' %}
 {% block content %}
-<div class="title">
+<div class="title-top">
     <h2>{{ name }}</h2>
 </div>
 <div class="">
-    
 <p>Start: {{ start }}</p>
 <p>End: {{ end }}</p>
 <h4>Parties</h4>
