--- a/admin_site/templates/add_voter.html
+++ b/admin_site/templates/add_voter.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% block content %}
-<div class="title">
+<div class="title-top">
   <h2>Add Voter </h2>
 </div>
 <div class="main">
