--- a/admin_site/templates/schools.html
+++ b/admin_site/templates/schools.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% block content %}
-<div class="title">
+<div class="title-top">
     <h2>Schools</h2>
 </div>
 <div class="main">
