--- a/static/css/main.css
+++ b/static/css/main.css
@@ -2,8 +2,6 @@ a, a:hover, a:link, a:visited, a:active {
     color: white !important;
 }
 
-
-
 .cards-wrapper {
    display: grid;
     margin-top: 16px;
@@ -18,7 +16,8 @@ a, a:hover, a:link, a:visited, a:active {
 }
 
 .card-img-top {
-  width: 1px;
+  width: 320px;
+  height: 200px;
 }
 
 
@@ -59,14 +58,17 @@ a, a:hover, a:link, a:visited, a:active {
   overflow: scroll;
   margin-left: 200px;
 }
-.main-content .title {
+
+.main-content .title-top {
 	background-color: #eef1f7;
 	padding: 10px 20px;
 	font-weight: 700;
 	color: #333;
 	font-size: 18px;
-	margin-top: 32px;
+  margin-top: 32px;
+  margin-bottom: 16px;
 }
+
 .form {
   height: 100%;
   width: 40%;
@@ -161,6 +163,7 @@ nav span{
     background-color: #ffffff;
     position: relative;
   }
+  
   .widget .title {
     background-color: #eef1f7;
     /* border-bottom: 1px solid #dfe4ec; */
