--- a/admin_site/templates/add_voter.html
+++ b/admin_site/templates/add_voter.html
@@ -4,7 +4,7 @@
   <h2>Add Voter </h2>
 </div>
 <div class="main">
-<div class="form"
+<div class="form">
 <form method="POST" action="{% url "voter_reg" %}">
   <div class="form-row">
     <div class="form-group col-md-6">
