--- a/admin_site/templates/base.html
+++ b/admin_site/templates/base.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <link rel="stylesheet" href="{% static "css/main.css"%}">
     <body>
-        <nav class="navbar navbar-dark bg-dark static-nav">
+        <nav class="navbar navbar-dark bg-primary static-nav">
             <a class="navbar-brand" href="{% url "admin_index" %}">Votr</a>
             <ul class="nav justify-content-end">
                 {% comment %} <li class="nav-item">
@@ -24,21 +24,27 @@
                         <a href="{% url "admin_index" %}">Home</a>
                     </li>
                     <li>
+                        <i class="fa fa-plus" aria-hidden="true"></i>
                         <a href="{% url "admin_add_aspirant" %}">Add Aspirant</a>
                     </li>
                     <li>
+                        <i class="fa fa-address-book-o" aria-hidden="true"></i>
                         <a href="{% url "admin_create_election" %}">Create Election</a>
                     </li>
                     <li>
+                        <i class="fa fa-eye" aria-hidden="true"></i>
                         <a href="{% url "admin_elections" %}">View Elections</a>
                     </li>
                     <li>
+                        <i class="fa fa-th-list" aria-hidden="true"></i>
                         <a href="{% url "admin_add_school" %}">Add School</a>
                     </li>
                     <li>
+                        <i class="fa fa-list" aria-hidden="true"></i>
                         <a href="{% url "admin_schools" %}">View Schools</a>
                     </li>
                     <li>
+                        <i class="fa fa-lock" aria-hidden="true"></i>
                         <a href="{% url "logout" %}?next=/">Logout</a>
                     </li>
                 </ul>
